<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/bkg_post"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="12dp"
    android:layout_margin="16dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImageUserQna"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_margin="18dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/dummy_person_img"
                app:civ_border_color="@color/gray_hint_light"
                app:civ_border_width="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toTopOf="@id/profileImageUserQna"
                app:layout_constraintBottom_toBottomOf="@id/profileImageUserQna"
                app:layout_constraintStart_toEndOf="@id/profileImageUserQna">




                <TextView
                    android:id="@+id/NameTvQna"
                    style="@style/TextAppearance.Nexa.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/adaptive_black"
                    android:text="@string/dummy_name"
                    />

                <TextView
                    android:id="@+id/TimeStampTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_hint"
                    android:textSize="14sp"
                    android:text="@string/dummy_date"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/textQna"
                style="@style/TextAppearance.Nexa.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/adaptive_black"
                android:textSize="18sp"
                android:text="@string/lorem_ipsum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileImageUserQna" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardPostItemImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:background="@color/bkg_post"
                android:layout_marginEnd="16dp"
                android:maxHeight="300dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textQna">


                <ImageView
                    android:id="@+id/QnaImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/post"
                    android:maxHeight="200dp"
                    android:background="@color/bkg_post"
                    android:scaleType="centerCrop"
                    android:clipToOutline="true"
                    android:src="@drawable/dummy" />

            </com.google.android.material.card.MaterialCardView>

            <!-- Bottom Stroke -->
            <View
                android:id="@+id/postInsideViewQna"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_hint_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardPostItemImage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center|start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/postInsideViewQna">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <ImageButton
                        android:id="@+id/likeBtnQna"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/like_btn"
                        android:padding="12dp"
                        android:src="@drawable/heart"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/likeCountQna"
                        style="@style/TextAppearance.Nexa.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_count"
                        android:textColor="@color/adaptive_black"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@id/likeBtnQna"
                        app:layout_constraintStart_toEndOf="@id/likeBtnQna"
                        app:layout_constraintTop_toTopOf="@id/likeBtnQna" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <ImageButton
                        android:id="@+id/commentBtnQna"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/comment_btn"
                        android:padding="12dp"
                        android:src="@drawable/comment"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/commentCountQna"
                        style="@style/TextAppearance.Nexa.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_count"
                        android:textColor="@color/adaptive_black"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@id/commentBtnQna"
                        app:layout_constraintStart_toEndOf="@id/commentBtnQna"
                        app:layout_constraintTop_toTopOf="@id/commentBtnQna" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
