<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFullScreenPost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkg"
    tools:context=".ui.QnA.CommentsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"
                    style="@style/TextAppearance.Nexa.Bold"
                    android:textSize="18sp"
                    android:layout_margin="12dp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Bottom Stroke -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_hint_light" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commentRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            android:clipToPadding="false"
            tools:listitem="@layout/item_comment"
            />

    </LinearLayout>

    <!-- EditText for user input attached to the bottom -->
    <LinearLayout
        android:id="@+id/commentInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@color/bkg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/add_a_comment"
            android:padding="12dp"
            android:background="@drawable/circular_edittext"
            android:inputType="text" />

        <ImageView
            android:id="@+id/sendCommentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:src="@drawable/send"
            android:contentDescription="@string/post"
            app:tint="@color/adaptive_black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
